base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-canary
  labels:
    app: app
    monitoring: enabled
spec:
  selector:
    app: app
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: metrics
      protocol: TCP
      port: 9110
      targetPort: metrics
